--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html">
 
 <head>
   <meta charset="utf-8" />
@@ -30,7 +30,7 @@
   <title>React App</title>
 </head>
 
-<body>
+<body id="body" class="no-scroll">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div id="portal"></div>
