--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <title>React App</title>
 </head>
 
-<body id="body" class="no-scroll">
+<body id="body" >
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div id="portal"></div>
